--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "vcolorpicker": "^1.0.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
