--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
     "lib": "vue-cli-service build --target lib --name elTableAdminPage --dest lib packages/index.js"
   },
   "dependencies": {
-    "element-ui": "^2.13.2",
-    "vue": "^2.6.11"
+    "element-ui": "^2.15.2",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "sass": "^1.26.5",
+    "sass": "^1.35.0",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "repository": {
     "type": "git",
