--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "eslint": "^7.28.0",
     "eslint-plugin-vue": "^7.11.1",
     "lint-staged": "^11.0.0",
+    "node-sass": "^6.0.0",
     "sass": "^1.35.0",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "repository": {
