--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "deploy": "bash deploy.sh",
     "lib": "vue-cli-service build --target lib --name elTableAdminPage --dest lib packages/index.js"
   },
   "dependencies": {
