--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "el-table-admin-page",
+  "name": "@wu529778790/el-table-admin-page",
   "version": "0.2.4",
   "description": "基于elment ui的el-table的快速页面生成器",
   "author": "wu529778790",
@@ -39,6 +39,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:wu529778790/el-table-admin-page"
+  },
+  "publishConfig": { 
+    "repository": "https://npm.pkg.github.com/wu529778790"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
